<?xml version="1.0"?>
<package format="2">
  <name>nxp_demo</name>
  <version>0.0.0</version>
  <description>The nxp_demo package</description>


  <maintainer email="choco@todo.todo">choco</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>std_msgs</depend>

</package>
